# AgentOS

./: .env.example  .gitignore  .pre-commit-config.yaml  .pyre_configuration  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md  db_migrate.py  docker-compose.yml  dump.rdb  logs_test_exec.txt  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  saas_backend.db  setup.sh  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pip-audit-scheduled.yml  security-audit.yml
agent/: agent_pool.py  core.py  executor.py  llm.py  loader.py  orchestrator.py  sandbox.py  selector.py  task_graph.py
agent/memory/: engine.py
agent/planner/: executor.py  graph.py
agent/tools/: base.py  filesystem.py  registry.py  system.py
agent/utils/: batch_infer.py  inference_cache.py  model_router.py  state_tracker.py  tools.py  validator.py
agents/: coder.md  debugger.md  planner.md
backend/: config.py
backend/api/: main.py  rate_limiter.py
backend/api/routers/: agents.py  health.py  metrics.py  system.py  task.py  ws.py
backend/db/: database.py
backend/models/: sql_models.py
backend/utils/: workspace_manager.py
backend/workers/: celery_app.py  tasks.py
cli/: __init__.py  client.py  config.py  main.py
cli/commands/: __init__.py  config.py  demo.py  doctor.py  explain.py  list_tasks.py  result.py  run.py  status.py
docs/: agent-format.md  api-reference.md  turboquant_results.md
examples/: README.md
examples/agents/: reviewer.md  tester.md
examples/tasks/: hello_world_api.json  redis_cache_layer.json  stripe_webhook.json
scripts/: bench_6_7b.py  bench_all_models.py  bench_results.py  check_secrets.py  time_6_7b.py  turbo_bench_pairs.py  turbo_compare.py
tests/: conftest.py
tests/contract/: test_api_contract.py
tests/integration/: test_task_lifecycle.py
tests/perf/: test_load.py
tests/regression/: test_bug_fixes.py
tests/security/: test_injection.py
tests/unit/: test_config.py  test_executor.py  test_llm.py  test_memory_engine.py  test_sql_models.py  test_task_router.py  test_tasks_worker.py
workspace/089982ed-f43d-4189-8cb8-2d32f8794dc4/: workspace_map.json
workspace/3159ad8c-c959-45f0-af43-6d56d25fa8c5/: add.py
workspace/449c2686-95b3-4042-9994-119ed7789d18/: add.py  workspace_map.json
workspace/842a47e1-d99b-47d8-8f63-2d5389ee974e/: workspace_map.json
workspace/aca4e5b3-5240-446e-8e88-e646f0e2fd9b/: workspace_map.json
