[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "agentos"
version = "1.0.0"
description = "Local-first autonomous AI coding agent with sandboxed DAG execution"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AgentOS Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.111,<0.200",
    "uvicorn[standard]>=0.29,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "requests>=2.31,<3.0",
    "chromadb>=0.5,<1.0",
    "docker>=7.1,<8.0",
    "tenacity>=8.3,<9.0",
    "python-dotenv>=1.0,<2.0",
    # CLI
    "typer[all]>=0.12,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.scripts]
agentos = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "agent*", "backend*"]
exclude = ["tests*", "frontend*", "workspace*"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "pytest-benchmark>=4.0,<5.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-mock>=3.14,<4.0",
    "httpx>=0.27,<0.28",
    "fakeredis>=2.21,<3.0",
    "freezegun>=1.4,<2.0",
    "factory-boy>=3.3,<4.0",
    # Formatting & Linting
    "ruff>=0.4,<1.0",
    "black>=24.4,<25.0",
    "mypy>=1.10,<2.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    # Pre-commit
    "pre-commit>=3.7,<4.0",
]
test = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "pytest-benchmark>=4.0,<5.0",
    "httpx>=0.27,<0.28",
    "fakeredis>=2.21,<3.0",
    "freezegun>=1.4,<2.0",
]

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    "venv", ".venv", "node_modules", ".git", "__pycache__",
    "workspace", "migrations", "frontend",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import ordering)
    "B",     # bugbear (common pitfalls)
    "C4",    # comprehension improvements
    "UP",    # pyupgrade (modern syntax)
    "N",     # pep8-naming conventions
    "S",     # bandit security rules
    "A",     # flake8-builtins shadowing
    "PTH",   # prefer pathlib over os.path
    "SIM",   # simplify expressions
    "RET",   # return statement cleanup
    "TCH",   # type-checking imports
    "ARG",   # unused arguments
    "DTZ",   # datetime timezone awareness
    "RUF",   # ruff-specific rules
]
ignore = [
    "S101",  # assert is fine in tests and pydantic validators
    "S603",  # subprocess calls are intentional in sandbox module
    "S607",  # partial executable path — acceptable in controlled env
    "ARG001",# unused function args are common in callback signatures
    "RET504",# unnecessary assignment before return — readability preference
    "B008",  # do not perform function calls in argument defaults (Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S",     # security rules too noisy in tests
    "N",     # naming conventions relaxed in tests
    "F841",  # unused variables common in test fixtures
    "ARG",   # unused args in test fixtures
    "DTZ",   # timezone in tests not critical
]
"**/__init__.py" = ["F401"]  # unused imports common in __init__

[tool.ruff.lint.isort]
known-first-party = ["agent", "backend"]
force-single-line = false
lines-between-types = 1

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fakeredis.*"
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -ra --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "unit: unit tests (fast, isolated)",
    "integration: integration tests requiring DB/Redis",
    "contract: API contract tests",
    "security: security tests",
    "regression: regression guards for specific bugs",
    "perf: performance benchmarks",
    "benchmark: pytest-benchmark performance tests",
    "slow: tests that take > 5s",
]

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
branch = true
source = ["backend", "agent"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/workspace/*",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

# ═══════════════════════════════════════════════════════════════════════════════
# BANDIT CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
# No skips — use inline # nosec comments with justification if truly needed

# ═══════════════════════════════════════════════════════════════════════════════
# BLACK CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.black]
target-version = ["py311"]
line-length = 88
